Bug 373495 - Render cache should not be affected by onion skin
Summary: Render cache should not be affected by onion skin
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: 3.0.2 Alpha
Platform: Other Microsoft Windows
: NOR minor
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-12-10 11:45 UTC by Bollebib
Modified: 2017-04-06 18:42 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bollebib 2016-12-10 11:45:43 UTC
Maybe this is impossible but I hope it isn't.


When working on a bigger animation,having a cache ready to go is great. There are some issues still with how fluently it renders,but those are probably seperate from this.

When you activate onion skins krita removes ALL cached frames. even if it would be impossible to not have onion skins influence the cached animations. at the least it should only remove the frames that are actually onion skinned,not dump 100 cached frames at once. I have the memory to make it work,but krita needs to remember the cache. 

Ideally this would also be true for canvas-only

when going canvas-only the cache gets dumped. Maybe it should start a seperate cache for a single layer and keep the global cache?
Comment 1 Dmitry Kazakov 2016-12-12 09:38:55 UTC
Added to
https://phabricator.kde.org/T4876
Comment 2 Dmitry Kazakov 2017-04-06 18:42:17 UTC
Git commit af60e5d1b51aa7969cbaeb66fec28e7aee9a9ac2 by Dmitry Kazakov.
Committed on 06/04/2017 at 18:40.
Pushed by dkazakov into branch 'master'.

Don't reset animation cache when toggling layer's onion skins switch

Fixes T4876

M  +27   -1    libs/image/commands/kis_node_property_list_command.cpp
M  +7    -4    libs/image/kis_image.cc
M  +1    -1    libs/image/kis_image.h
M  +8    -1    libs/image/kis_node.cpp
M  +7    -0    libs/image/kis_node.h
M  +1    -1    libs/image/kis_node_graph_listener.cpp
M  +1    -1    libs/image/kis_node_graph_listener.h
M  +0    -5    libs/image/kis_paint_layer.cc
M  +0    -3    libs/image/kis_paint_layer.h
M  +2    -1    libs/image/kis_projection_updates_filter.cpp
M  +2    -2    libs/image/kis_projection_updates_filter.h
M  +0    -5    libs/image/kis_selection_based_layer.cpp
M  +0    -1    libs/image/kis_selection_based_layer.h
M  +16   -15   libs/image/kis_suspend_projection_updates_stroke_strategy.cpp
M  +2    -2    libs/ui/widgets/kis_scratch_pad.cpp

https://commits.kde.org/krita/af60e5d1b51aa7969cbaeb66fec28e7aee9a9ac2