Don't reset animation cache when toggling layer's onion skins switch

Fixes T4876
BUG:373495